--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "env": {
+    "node": true
+  }
 }
